add API to the routes
